--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -41,6 +41,8 @@
     "react-scripts": "^3.2.0",
     "react-transition-group": "^4.3.0",
     "react-use": "^13.12.2",
+    "react-virtualized-auto-sizer": "^1.0.2",
+    "react-window": "^1.8.5",
     "reconnecting-websocket": "^4.2.0",
     "scroll-into-view": "^1.9.7",
     "typeface-roboto": "0.0.75"
