--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -32,6 +32,7 @@
     "prop-types": "^15.7.2",
     "qs": "^6.9.0",
     "react": "^16.10.1",
+    "react-contextmenu": "^2.13.0",
     "react-dom": "^16.10.1",
     "react-hot-loader": "^4.12.14",
     "react-hotkeys": "^2.0.0",
